Fix navigation links and update classes in quem-somos.html

--- a/quem-somos.html
+++ b/quem-somos.html
@@ -5,20 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Quem Somos - InovaTech</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Caminhos corrigidos -->
     <link rel="stylesheet" href="../static/styles/main.css" />
     <link rel="stylesheet" href="../static/styles/quem-somos.css" />
   </head>
   <body>
     <header>
       <div class="textos-header">
-        <a href="../views/index.html">Home</a>
-        <a href="quem-somos.html">Quem Somos</a>
-        <a href="">Parceirias</a>
+        <a href="index.html">Home</a>
+        <a href="quem-somos.html" class="ativo">Quem Somos</a>
+        <a href="#">Parcerias</a>
         <a href="contato.html">Contatos</a>
-        <a href="">Serviços</a>
+        <a href="#">Serviços</a>
       </div>
-      <a href="../views/index.html">
-        <img src="../static/img/logo.png" alt="inovatech logo" />
+
+      <a href="index.html">
+        <img src="../static/img/logo.png" alt="Inovatech logo" />
       </a>
     </header>
 
@@ -85,9 +88,9 @@
       <div class="footer-links">
         <a href="index.html">Home</a>
         <a href="quem-somos.html">Quem Somos</a>
-        <a href="">Parceirias</a>
+        <a href="#">Parcerias</a>
         <a href="contato.html">Contatos</a>
-        <a href="">Serviços</a>
+        <a href="#">Serviços</a>
       </div>
     </footer>
   </body>
